make sure output_manager can find yaml *.mod

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -205,10 +205,9 @@ if(GOTM_USE_FABM)
   add_library(gotm_fabm
               fabm/gotm_fabm.F90
              )
-  target_link_libraries(gotm_fabm util)
+  target_link_libraries(gotm_fabm util ${FABM_LIBRARIES})
   set_property(TARGET gotm_fabm APPEND PROPERTY INCLUDE_DIRECTORIES "${FABM_INCLUDE_DIRS}")
   set_property(TARGET gotm_fabm APPEND PROPERTY INTERFACE_INCLUDE_DIRECTORIES "${FABM_INCLUDE_DIRS}")
-  target_link_libraries(gotm_fabm ${FABM_LIBRARIES})
   set(GOTM_LIBS ${GOTM_LIBS} gotm_fabm)
   set(EXTERNAL_LIBS ${FABM_LIBRARIES})
 else()
@@ -231,6 +230,7 @@ if(GOTM_USE_FLEXIBLE_OUTPUT)
   target_link_libraries(output_manager util)
   if(GOTM_USE_FABM)
     target_link_libraries(output_manager ${FABM_LIBRARIES})
+    set_property(TARGET output_manager APPEND PROPERTY INCLUDE_DIRECTORIES "${FABM_INCLUDE_DIRS}")
   endif()
   set(GOTM_LIBS ${GOTM_LIBS} output_manager)
 endif(GOTM_USE_FLEXIBLE_OUTPUT)
