--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -201,7 +201,6 @@ if(GOTM_USE_FABM)
   endif()
   add_library(gotm_fabm
               fabm/gotm_fabm.F90
-              fabm/gotm_fabm_input.F90
              )
   target_link_libraries(gotm_fabm util ${FABM_LIBRARIES})
   set_property(TARGET gotm_fabm APPEND PROPERTY INCLUDE_DIRECTORIES "${FABM_INCLUDE_DIRS}")
@@ -307,7 +306,7 @@ if(GOTM_USE_FABM)
   add_library(gotm_fabm_io
               fabm/gotm_fabm_input.F90
               )
-  target_link_libraries(gotm_fabm_io input gotm_fabm)
+  target_link_libraries(gotm_fabm_io observations input gotm_fabm)
   set(GOTM_LIBS ${GOTM_LIBS} gotm_fabm_io)
 endif(GOTM_USE_FABM)
 
